<resources>
    <string name="app_name">Green House Controller</string>
    <string name="sector_id">Sector %1$d</string>
    <string name="device_address">Device address</string>
    <string name="device_address_hint">00:00:00:00:00:00</string>
    <string name="device_id_hint">Device Id</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="info">Info</string>
    <string name="logs">Logs</string>
    <string name="exit_confirmation_msg">Are you sure to exit?</string>
    <string name="button_state">State</string>
    <string name="button_actions">Actions</string>

    <string name="start_button_controller">Controller</string>
    <string name="start_button_viewer">Viewer</string>

    <string name="button_get_data">Get data</string>
    <string name="button_set_time">Set time</string>
    <string name="button_get_global_limits">Get global limits</string>
    <string name="button_set_global_limits">Set global limits</string>
    <string name="button_start_ventilation">Start ventilation</string>
    <string name="button_sector_0">Sector 0</string>
    <string name="button_sector_1">Sector 1</string>
    <string name="button_sector_2">Sector 2</string>
    <string name="button_custom_command">Custom command</string>
    <string name="hint_custom_command">Custom command</string>

    <string name="button_start_watering">Start watering</string>
    <string name="button_get_watering_limits">Get watering limits</string>
    <string name="button_set_watering_limits">Set watering limits</string>
    <string name="button_open_window">Open window</string>
    <string name="button_close_window">Close window</string>
    <string name="button_start_sector_ventilation">Start ventilation</string>
    <string name="button_get_climate_limits">Get climate limits</string>
    <string name="button_set_climate_limits">Set climate limits</string>

    <string name="info_time">Time: </string>
    <string name="info_signal_strength">Signal strength:</string>
    <string name="info_battery_charging">Battery charging:</string>
    <string name="info_battery_level">Battery level:</string>
    <string name="info_restart_bluetooth_counter">Restart connection in:</string>
    <string name="info_restart_now">Restart now</string>

    <string name="logs_info_messages">Info messages</string>
    <string name="logs_data_messages">Data messages</string>
    <string name="logs_phone_data">Phone data</string>

    <string name="network_mobile_device_received">Mobile device received: %1$d bytes</string>
    <string name="network_mobile_device_transmitted">Mobile device transmitted: %1$d bytes</string>
    <string name="network_wifi_device_received">Wi-Fi device received: %1$d bytes</string>
    <string name="network_wifi_device_transmitted">Wi-Fi device transmitted: %1$d bytes</string>
    <string name="network_mobile_app_received">Mobile app received: %1$d bytes</string>
    <string name="network_mobile_app_transmitted">Mobile app transmitted: %1$d bytes</string>
    <string name="network_wifi_app_received">Wi-Fi app received: %1$d bytes</string>
    <string name="network_wifi_app_transmitted">Wi-Fi app transmitted: %1$d bytes</string>
</resources>
