<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonExit" />

            <Button
                android:id="@+id/buttonState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_state"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonInfo" />

            <Button
                android:id="@+id/buttonActions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_actions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonState" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonActions" />

            <Button
                android:id="@+id/command_get_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_get_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <Button
                android:id="@+id/command_set_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/command_get_data" />

            <Button
                android:id="@+id/command_get_global_limits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_get_global_limits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/command_set_time" />

            <Button
                android:id="@+id/command_set_global_limits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_global_limits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/command_get_global_limits" />

            <Button
                android:id="@+id/command_start_ventilation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_start_ventilation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/command_set_global_limits" />

            <Button
                android:id="@+id/command_sector0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_sector_0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/command_start_ventilation" />

            <Button
                android:id="@+id/command_sector1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_sector_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/command_sector0" />

            <Button
                android:id="@+id/command_sector2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_sector_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/command_sector1" />

            <EditText
                android:id="@+id/custom_command_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_custom_command"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/command_sector2" />

            <Button
                android:id="@+id/command_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_custom_command"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/custom_command_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
